--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
         {% endif %}
 
         {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
+        <p class="view"><a href="{{ site.github.owner_url }}">GitHub Profile</a></p>
         {% endif %}
 
         <ul class="downloads">
@@ -35,9 +35,9 @@
           <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
           <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
         {% endif %}
-          <li><a href="/portfolio"><strong>Portfolio</strong></a></li>
-          <li><a href="/blog"><strong>Blog</strong></a></li>
-          <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
+          <li><a href="/portfolio">My<strong>Portfolio</strong></a></li>
+          <li><a href="/blog">Read<strong>Blog</strong></a></li>
+          <li><a href="{{ site.github.owner_url }}"><strong>GitHub</strong> Profile</a></li>
         </ul>
       </header>
       <section>
