--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,19 +25,20 @@
         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
-
+<!--
         {% if site.github.is_user_page %}
         <p class="view"><a href="{{ site.github.owner_url }}">GitHub Profile</a></p>
         {% endif %}
+-->
 
         <ul class="downloads">
         {% if site.show_downloads %}
           <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
           <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
         {% endif %}
-          <li><a href="/portfolio">My<strong>Portfolio</strong></a></li>
-          <li><a href="/blog">Read<strong>Blog</strong></a></li>
-          <li><a href="{{ site.github.owner_url }}"><strong>GitHub</strong> Profile</a></li>
+          <li><a href="/portfolio">look at<strong>Portfolio</strong></a></li>
+          <li><a href="/blog">read<strong>Blog</strong></a></li>
+          <li><a href="{{ site.github.owner_url }}">go to<strong>GitHub</strong>profile</a></li>
         </ul>
       </header>
       <section>
