--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
         {% endif %}
           <li><a href="/portfolio">look at<strong>Portfolio</strong></a></li>
           <li><a href="/blog">read<strong>Blog</strong></a></li>
-          <li><a href="{{ site.github.owner_url }}">go to<strong>GitHub</strong>profile</a></li>
+          <li><a href="{{ site.github.owner_url }}">go to<strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
