--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -2,7 +2,12 @@
 layout: default
 ---
 
+<small>{{ page.starty - page.endy }}</small>
+
+<!--
 <small>{{ page.date | date: "%-d %B %Y" }}</small>
+-->
+
 <h1>{{ page.title }}</h1>
 
 <!--
