date range style fix

--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<small>{{ page.starty - page.endy }}</small>
+<small>{{ page.starty }} - {{ page.endy }}</small>
 
 <!--
 <small>{{ page.date | date: "%-d %B %Y" }}</small>
